--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "live-server --port=3000",
-    "build": "echo 'Build process would be here'",
+    "build": "mkdir -p dist && cp *.html *.css *.js dist/ 2>/dev/null || true",
     "dev": "live-server --port=3000 --open=/index.html"
   },
   "keywords": [
