--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       "use": "@vercel/static"
     },
     {
-      "src": "regionale.html",
+      "src": "regionale-inline.html",
       "use": "@vercel/static"
     },
     {
